--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
   </main>
   <footer class="page__footer">
-    <p>&copy Udacity</p>
+    <p>&copy; Udacity</p>
   </footer>
   <script src="js/app.js"></script>
 </body>
